@startuml
skinparam classAttributeIconSize 0
left to right direction
class EfetuarCandidaturaUI {
}

class EfetuarCandidaturaController {
  +getListAnunElegiv()
  +novaCandidatura(valor,numDias,textoApres,textoMotiv)
  +registaCategoria()
  -ListAnuncioDisponiveis
}

class Plataforma {
  -designacao
  +getRegistoAnuncio()
  +getRegistoFreelancer()
}

class CompetenciaTecnica {
  -codigo
  -descBreve
  -descDetalhada
  -grauProficiencia
  +getListaGrauProficiencia()
}

class AplicacaoPOT {
   +static getInstance()
   +getSessaoAtual()
}

class Organização {
   -string NIF
   -string website
   -string telefone
   -string nome
   -string email
   +Organização(NIF,website, telefone, nome, email)
}


class Categoria {
  -id
  -descricao
  +getListCompetenciasTecnicas()
}

class RegistoFreelancer {
   +getFreelancerByEmail(emailUtiliz)
}

class RegistoAnuncio {
   +getListAnunciosDisponiveis()
}

class CaraterCT {
   -boolean obrigatoriedade
}

class Candidatura{
  -Date dataCandidatura
  -Double valorPretendido
  -Integer numDias
  -String txtApresentacao
  -String txtMotivacao
   +novaCandidatura(valor,numDias,textoApres,textoMotiv)
}

class ListaCandidatura {
   +novaCandidatura(valor,numDias,textoApres,textoMotiv)
   -validaCandidatura(candid)
}

class GrauProficiencia {
   -grau
   -designação
}

class GrauMinimoExigivel {
   -graus
   +getGrauMinimoExigivel
}

class Freelancer {
  -String nome
  -String NIF
  -String telefone
  -String email
  +getReconhecimento()

}

class Reconhecimento {
   -String designacao
   -String data
   +getCompetenciaTecnica()
   +getGrauProficiencia()
}

class SessaoUtilizador {
   +getEmailUtilizador()
}

class Anuncio {
   -String periodoPub
   -String peridooCand
   -String periodoSeriacao
   -addCandidatura(candid)
   +getTarefa()
}

class Tarefa {
  -String refUnica
  -String designacao
  -String descInf
  -String descTec
  -Integer duracao
  -Double custo
   +getCategoriaTarefa()
}

EfetuarCandidaturaUI ..> EfetuarCandidaturaController
EfetuarCandidaturaController ..> Plataforma
EfetuarCandidaturaController ..> AplicacaoPOT
EfetuarCandidaturaController ..> SessaoUtilizador
Plataforma "1" --> "1" RegistoFreelancer : possui
Plataforma "1" --> "1" Organização : possui
Organização "1" --> "1..*" RegistoAnuncio : possui
RegistoAnuncio "1" --> "*" Anuncio : possui
Anuncio "0..1" --> "*" Tarefa : gerado
Anuncio "1" --> "1..*" ListaCandidatura : tem
ListaCandidatura "1" --> "*" Candidatura : tem
Tarefa "1" --> "1" Categoria : enquadra-se em
Categoria "1" --> "*" CaraterCT : tem/requer
CaraterCT "*" -> "1" CompetenciaTecnica : referente a
CompetenciaTecnica "1" -> "1..*" GrauProficiencia : possui
GrauProficiencia "1" -> "1" GrauMinimoExigivel : tem
RegistoFreelancer "1" --> "*" Freelancer : possui
Freelancer "1" --> "1" Reconhecimento : tem
Reconhecimento "1" --> "1..*" GrauProficiencia : tem
@enduml